--- a/formato.css
+++ b/formato.css
@@ -4,12 +4,12 @@ body {
 
 }
 
-h1 { color: rgb (228, 52, 93); 
+h1 { color: white; 
 }
 
-p { color: rgb (228, 52, 93);
+p { color: white;
 }
 
-img {width: 200 px;
-	height: 200 px; 
+img {width: 200px;
+	height: 200px; 
 }
